--- a/PySpark_Regression_Analysis.ipynb
+++ b/PySpark_Regression_Analysis.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": " PySpark_Regression_Analysis",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -34,7 +35,7 @@
         "\n",
         "# **Running Pyspark in Colab**\n",
         "\n",
-        "To run spark in Colab, we need to first install all the dependencies in Colab environment i.e. Apache Spark 2.3.2 with hadoop 2.7, Java 8 and Findspark to locate the spark in the system. The tools installation can be carried out inside the Jupyter Notebook of the Colab. One important note is that if you are new in Spark, it is better to avoid Spark 2.4.0 version since some people have already complained about its compatibility issue with python. \n",
+        "To run spark in Colab, we need to first install all the dependencies in Colab environment i.e. Apache Spark 3.0.0 with hadoop 3.2, Java 8 and Findspark to locate the spark in the system. The tools installation can be carried out inside the Jupyter Notebook of the Colab. One important note is that if you are new in Spark, it is better to avoid Spark 2.4.0 version since some people have already complained about its compatibility issue with python. \n",
         "Follow the steps to install the dependencies:"
       ]
     },
@@ -53,22 +54,6 @@
         "# unzip it\n",
         "!tar xf spark-3.0.0-bin-hadoop3.2.tgz\n",
         "# install findspark \n",
-        "!pip install -q findspark"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lh5NCoc8fsSO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
-        "!wget -q https://www-us.apache.org/dist/spark/spark-2.4.1/spark-2.4.1-bin-hadoop2.7.tgz\n",
-        "!tar xf spark-2.4.1-bin-hadoop2.7.tgz\n",
         "!pip install -q findspark"
       ],
       "execution_count": null,
